force-app/main/default/objects/RTPPhase__c/RTPPhase__c.object-meta.xml
<CustomObject>
    <description>Phase Return To Play (RTP) pour une blessure donnée.</description>
    <label>RTP Phase</label>
    <nameField>
        <label>RTP Phase Name</label>
        <type>AutoNumber</type>
        <displayFormat>RTP-{0000}</displayFormat>
    </nameField>
    <pluralLabel>RTP Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>