force-app/main/default/objects/RTPPhase__c/fields/Injury__c.field-meta.xml
<CustomField>
    <fullName>Injury__c</fullName>
    <label>Injury</label>
    <referenceTo>Injury__c</referenceTo>
    <relationshipLabel>RTP Phases</relationshipLabel>
    <relationshipName>RtpPhases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>