force-app/main/default/objects/RTPPhase__c/fields/PhaseStatus__c.field-meta.xml
<CustomField>
    <fullName>PhaseStatus__c</fullName>
    <label>Phase Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>